<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/styleBackgroundLight"
    tools:context=".ui.SendDocumentsFragment">


    <TextView
        android:id="@+id/txSendDocumentation"
        style="@style/styleSendDocumentsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/send_documentation"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCamera"
        style="@style/styleImageViewCameraSendDocuments"
        android:layout_width="138dp"
        android:layout_height="134dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/camera_permission"
        android:src="@drawable/ic_camera_light_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txSendDocumentation" />

    <Spinner
        android:id="@+id/spId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCamera"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etIdSendDocuments"
        style="@style/styleSendDocumentsTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="none"
        android:drawableStart="@drawable/ic_id_light_mode"
        android:drawablePadding="20dp"
        android:hint="@string/id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spId" />

    <EditText
        android:id="@+id/etNameSendDocuments"
        style="@style/styleSendDocumentsTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:hint="@string/names"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdSendDocuments" />

    <EditText
        android:id="@+id/etLastNameSendDocuments"
        style="@style/styleSendDocumentsTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameSendDocuments" />

    <EditText
        android:id="@+id/etEmailSendDocuments"
        style="@style/styleSendDocumentsTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastNameSendDocuments" />

    <EditText
        android:id="@+id/etDocumentType"
        style="@style/styleSendDocumentsTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/attached_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSendDocuments" />

    <Spinner
        android:id="@+id/spLocationCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDocumentType"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUploadDocument"
        style="@style/styleSendDocumentsButton1Light"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="612dp"
        android:backgroundTint="@color/sophos_pink"
        android:drawableStart="@drawable/ic_load_file_light_mode"
        android:paddingStart="16dp"
        android:text="@string/document"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendDocument"
        style="@style/styleSendDocumentsButton1Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/sophos_pink"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadDocument" />

</androidx.constraintlayout.widget.ConstraintLayout>