<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.WelcomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/menuToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvUserNameToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/light_color"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Fabio" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCorporateLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/corporate_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />

                <TextView
                    android:id="@+id/tvLegendOptionsWelcome"
                    android:layout_width="195dp"
                    android:layout_height="80dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/legend_welcome"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/styleBackgroundLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSendDocuments"
            style="@style/styleCardSendDocumentsLight"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvSendDocuments"
                    style="@style/styleTextViewSendDocuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingBottom="4dp"
                    android:text="@string/send_documents"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnSendDocuments"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.287"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSendDocuments"
                    style="@style/styleWelcomeButton1Light"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:drawableEnd="@drawable/ic_ahead_arrow_light_mode"
                    android:paddingStart="32dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageView
                    android:id="@+id/ivSendDocuments"
                    style="@style/styleImageViewSendDocuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvListDocuments"
            style="@style/styleCardListDocumentsLight"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvSendDocuments"
            app:layout_goneMarginTop="500dp"

            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvCardListDocuments"
                    style="@style/styleTextViewListDocuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingBottom="4dp"
                    android:text="@string/list_documents"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnListDocuments"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.261"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnListDocuments"
                    style="@style/styleWelcomeButton2Light"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:drawableEnd="@drawable/ic_ahead_arrow_light_mode"
                    android:paddingStart="32dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/ivCardListDocuments"
                    style="@style/styleImageViewListDocuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvGetOffice"
            style="@style/styleCardGetOfficesLight"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvListDocuments"
            app:layout_goneMarginTop="500dp"

            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvGetOffice"
                    style="@style/styleTextViewGetOffices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingBottom="4dp"
                    android:text="@string/offices"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnGetOffices"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.195"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGetOffices"
                    style="@style/styleWelcomeButton3Light"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:drawableEnd="@drawable/ic_ahead_arrow_light_mode"
                    android:paddingStart="32dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/ivGetOffices"
                    style="@style/styleImageViewGetOffices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>